--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "body-parser": "~1.14.2",
     "express": "~4.13.4",
     "express-handlebars": "3.0.0",
+    "q": "1.4.1",
     "mongoose": "~4.3.7",
-    "mongoose-paginate": "5.0.0",
+    "mongoose-pagination": "1.0.0",
+    "mongoose-q": "0.0.17",
     "path": "~0.12.7",
-    "promise": "^7.1.1",
     "express-session": "1.13.0",
     "html-metadata": "1.4.1"
   }
