--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose-q": "0.0.17",
     "path": "~0.12.7",
     "express-session": "1.13.0",
-    "html-metadata": "1.4.1"
+    "html-metadata": "1.4.1",
+    "request": "3.8.4"
   }
 }
