--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "krds-fav",
+  "name": "krds-watch",
   "version": "0.0.1",
-  "description": "App to Maintain KRDS Fav Links",
+  "description": "App to Maintain KRDS Links",
   "main": "app.js",
   "engines": {
-    "node": "4.2.6"
+    "node": "4.2.6",
+    "npm": "3.5.2"
   },
   "dependencies": {
     "body-parser": "~1.14.2",
@@ -17,6 +18,6 @@
     "path": "~0.12.7",
     "express-session": "1.13.0",
     "html-metadata": "1.4.1",
-    "request": "3.8.4"
+    "request": "2.72.0"
   }
 }
