--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "path": "~0.12.7",
     "express-session": "1.13.0",
     "html-metadata": "1.4.1",
-    "request": "2.72.0"
+    "request": "2.72.0",
+    "socket.io": "1.4.6"
   }
 }
